# revolution

./: .dockerignore  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  TODOS.rst  __init__.py  battery.json  battery_management_system.py  configurations.py  debug.Dockerfile  display.py  environment.py  er.name Katherine Betz  install.sh  main.py  meson.build  motor.py  power.py  requirements.txt  revolution.service  revolution@.service  revolution@.service.in  setup.py  start.sh  stop.sh  telemetry.py  temp.py  uninstall.sh
.github/workflows/: checks.yml
.kiro/specs/imu-motion-data/: .config.kiro  design.md  requirements.md  tasks.md
BMS_code/: PyKalman approach.py  batteryEKF.py
configurations/: development.py
data/: battery.json
docs/: conf.py  index.rst  requirements.txt  usage.rst
docs/_static/: Battery Management System CAN Communication Protocol.xlsx  Gen13 Battery Management System CAN Communication Protocol.xlsx  revolution.drawio
periphery/: __init__.pyi  gpio.pyi  i2c.pyi  led.pyi  mmio.pyi  pwm.pyi  serial.pyi  spi.pyi
revolution/: LIS2HH12.py  __init__.py  __main__.py  application.py  battery.py  battery_management_system.py  bms.py  contexts.py  data.py  debugger.py  display.py  driver.py  driver_controls.py  drivers.py  environment.py  main.py  mc2.py  miscellaneous.py  motor.py  motor_controller_squared.py  peripheries.py  periphery.py  power.py  psm.py  relay.py  settings.py  st7565.py  steering_wheel.py  telemeter.py  telemetry.py  thread_pool.py  utilities.py  webpagedebug.html  worker.py  worker_pool.py  xglcd_font.py
revolution/drivers/: ADC78H89.py
revolution/tests/: configurations.py  test_application.py  test_data.py  test_driver.py  test_driver_controls.py  test_drivers.py  test_environment.py  test_miscellaneous.py  test_motor.py  test_psm.py  test_steering_wheel.py  test_telemetry.py  test_utilities.py  test_worker_pool.py
src/: Makefile  app.cc  app.cpp  app.h  application.cc  application.cpp  application.h  client.cc  client.cpp  client.h  configuration.cpp  configuration.h  controller.cpp  controller.h  database.cpp  database.h  device.cpp  device.h  display.cpp  display.h  display_driver.cpp  display_driver.h  echo.cc  echo.cpp  echo.h  hardware.cpp  hardware.h  heart.cpp  heart.h  instance.cpp  instance.h  logger.cpp  logger.h  marshal.cpp  marshal.h  master.cpp  master.h  message.cpp  message.h  message_queue.cpp  (+43 more)
src/librevolution/: application.h  configuration.cpp  configuration.h  heart.cpp  heart.h  logger.h  meson.build  messenger.cpp  messenger.h  soldier.cpp  soldier.h  worker_pool.cpp
tests/integration/: .test_failovers.py.swp  requirements.txt  test_client.py  test_failovers.py  test_sync.py  utilities.py
